# BachThesisMathFinance

./: CMakeLists.txt  main.cpp
binance data/: Untitled.ipynb  get_data.py
cir/heat_kernels/matrices/: grad.c  hess.c  hess.h
cir/heat_kernels/problem/: ipopt_interface.cpp  ipopt_interface.h  model.c  model.h
cir/tail_normalized/matrices/: grad.c  grad.h  hess.c
cir/tail_normalized/problem/: ipopt_interface.cpp  ipopt_interface.h  model.c
cir/three_variate/matrices/: grad.c  grad.h  hess.h
cir/three_variate/problem/: ipopt_interface.cpp  ipopt_interface.h  model.c  model.h
data/: XBTUSD-30m-data.csv
file reader/: CSVReader.cpp  CSVReader.h
mathematica mle/: 3-variate-sums-exploration.nb  cir.nb  cir_model_tail_norm.nb  mle_1d.nb  mle_1h.nb  mle_5m.nb  mle_c_code.nb  tail_normalized_mr_model.nb  tailed_heat_kernels_cir.nb
modified_ou/matrices/: grad.c  grad.h  hess.c  hess.h
modified_ou/problem/: ipopt_interface.cpp  ipopt_interface.h  model.c  model.h
monte carlo/: CIR transformation check.ipynb
